Fixed leaderboard view on mobile devices

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,11 +4,16 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-top: 2rem; 
+    padding: 1rem 2rem 0 2rem; 
     align-items: center;
     justify-content: flex-start;
     flex-shrink: 0;
     flex-grow: 1;
+}
+
+#gameState, #totalScore{
+    text-align: center;
+    line-height: 1.5rem;
 }
 
 footer h2 {
