--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,5 @@
 header {
-    padding: 1.5rem 0px 1rem;    
+    padding: 1.5rem 1rem 1rem;    
 }
 
 header h2:nth-of-type(1) {
