--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,8 @@
 main {
+    flex: 1 0 auto;
+    display: flex;
     min-height: 60vh;
     margin-top: 2rem;
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
